cmake_minimum_required(VERSION 3.10)
project(problem_102 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(code main.cpp)
target_compile_options(code PRIVATE -O2 -pipe -Wall -Wextra -Wconversion -Wshadow -Wformat=2 -Wundef -Wpointer-arith -Wcast-qual)

